<resources>
    <string name="app_name">Mobile Grammar</string>
    <string name="app_short_name_in_translations">Mobile Grammar</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="about_program_string">About program</string>

    <string name="all_articles_menu_title">All lessons</string>
    <string name="search_enter_article_name">Enter article name …</string>

    <string name="nothing_found">Opps! No such lessons.</string>

    <string name="lessons_by_chapters">Chapters</string>

    <string name="user_group_has_not_been_found">It seems that there is no such group.</string>

    <string name="there_are_not_any_group">Yet there is not one group. But you can create new one by clicking on button Add on toolbar.</string>
    <string name="create_new_user_group_button">Create new list of lesson </string>

    <string name="enter_name_of_new_group">Enter name of group …</string>

    <string name="group1_title_menu">Group 1</string>
    <string name="group2_title_menu">Group 2</string>
    <string name="group3_title_menu">Group 3</string>
    <string name="group4_title_menu">Group 4</string>

    <string name="no_group_name_entered_by_user">Please, name this group somehow … </string>

    <string name="text_about_setup_reminder">You can set up a reminder. It will notificate you about time to learn the yours lessons.</string>

    <string name="setup_reminder">Setup reminder</string>

    <string name="save_group">Save group</string>

    <string name="group_has_been_saved">Group has been saved</string>

    <string name="your_groups">Your groups</string>

    <string name="new_group">New group</string>
    <string name="remove_group">Remove group</string>
    <string name="edit_group">Edit group</string>

    <string name="remove_all_groups">Remove all groups</string>

    <string name="remove_your_groups">Removing your groups</string>
    <string name="message_about_removing">This action will remove all your groups. Sure to continue ?</string>
    <string name="message_ok">OK</string>
    <string name="message_cancel">Cancel</string>
    <string name="groups_have_been_removed">OK, your groups have been removed.</string>

    <string name="this_group_has_been_removed">Group has been removed.</string>
    <string name="this_will_remove_selected_group">This action will remove selected group. Sure to continue ?</string>
    <string name="removing_group">Removing this group</string>


    <string name="see_groups">See groups</string>


    <string name="privacy_statement">Privacy statement</string>


    <string name="propose_user_to_select_lessons">Check lessons which you want to add to the new group</string>

    <string name="too_long_group_name">Sorry, it\'s too long group name. Please, keep within 50 characters</string>


    <string name="text_reminder_about_group">There are the group of lessons to study the "Mobile grammar"</string>
    <string name="text_reminder_about_lesson">There are the lesson to study the "Mobile grammar"</string>
    <string name="text_reminder">There is the group to study in "Mobile Grammatics"</string>

    <string name="update_group">Update group</string>
    <string name="text_about_updating">Updating the group</string>

    <!-- new version with irregular verbs -->

    <string name="irregular_verbs">Irregular verbs</string>
</resources>
