<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_all_articles" android:icon="@drawable/list_icon_item"
            android:title="@string/all_articles_menu_title" />
    </group>

    <item android:title="@string/lessons_by_chapters">
        <menu>
            <item android:id="@+id/menu_group1" android:icon="@drawable/lessons_group"
                android:title="@string/group1_title_menu" />
            <item android:id="@+id/menu_group2" android:icon="@drawable/lessons_group"
                android:title="@string/group2_title_menu" />
            <item android:id="@+id/menu_group3" android:icon="@drawable/lessons_group"
                android:title="@string/group3_title_menu" />
            <item android:id="@+id/menu_group4" android:icon="@drawable/lessons_group"
                android:title="@string/group4_title_menu" />
        </menu>
    </item>
    <item android:title="@string/your_groups">
        <menu>
            <item android:id="@+id/menu_user_groups" android:icon="@drawable/your_groups_icon"
                android:title="@string/see_groups" />
        </menu>
    </item>

</menu>